<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_sale_of_eggs_header"
        android:contentDescription="@string/add_sale_of_eggs_header"
        android:textSize="30sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_customer_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header_text_size"
        android:contentDescription="@string/customer_header"
        android:text="@string/customer_header"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header" />

    <Spinner
        android:id="@+id/spinner_customer_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_customer_header"
        android:layout_marginTop="8dp"
        android:background="@drawable/tv_border"
        android:contentDescription="@string/content_desc_customer_selector"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Spinner>

    <TextView
        android:id="@+id/tv_date_picker_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/header_text_size"
        android:contentDescription="@string/date_header"
        android:text="@string/date_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_customer_selector" />

    <TextView
        android:id="@+id/tv_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:contentDescription="@string/content_desc_date_picker_dialog"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:textSize="@dimen/selection_text_size"
        android:background="@drawable/tv_border"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="showDatePickerDialog"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_picker_header" />

    <TextView
        android:id="@+id/tv_number_of_dozen_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/number_of_dozen_header"
        android:contentDescription="@string/number_of_dozen_header"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_picker" />


    <NumberPicker
        android:id="@+id/np_number_of_dozen_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_desc_number_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_number_of_dozen_header"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp">

    </NumberPicker>

    <TextView
        android:id="@+id/tv_price_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/price_per_dozen_header"
        app:layout_constraintBottom_toBottomOf="@+id/tv_number_of_dozen_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_number_of_dozen_header"
        app:layout_constraintTop_toTopOf="@+id/tv_number_of_dozen_header" />

    <NumberPicker
        android:id="@+id/np_price_per_dozen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_desc_price_per_dozen"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_price_header"
        app:layout_constraintTop_toBottomOf="@+id/tv_price_header">

    </NumberPicker>

    <TextView
        android:id="@+id/tv_total_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/total_text"
        android:contentDescription="@string/total_text"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/np_number_of_dozen_selection" />

    <TextView
        android:id="@+id/tv_total_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:contentDescription="@string/content_desc_total_price"
        tools:text="$10.00"
        app:layout_constraintBottom_toBottomOf="@+id/tv_total_header"
        app:layout_constraintStart_toEndOf="@+id/tv_total_header"
        app:layout_constraintTop_toTopOf="@+id/tv_total_header" />

    <Button
        style="@style/Widget.AppCompat.Button"
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_cancel"
        android:contentDescription="@string/content_desc_cancel_button"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_header" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/btn_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/btn_record"
        android:contentDescription="@string/content_desc_record_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

</android.support.constraint.ConstraintLayout>