<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/background_app_header_image"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_desc_background"
        android:src="@drawable/app_title_background"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_time_period_selector"
        android:contentDescription="@string/content_desc_select_time_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_app_header_image">

    </Spinner>

    <TextView
        android:id="@+id/tv_sales_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/sales_for_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_time_period_selector" />

    <TextView
        android:id="@+id/tv_time_period_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/content_desc_time_period_being_shown"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sales_for"
        app:layout_constraintStart_toEndOf="@+id/tv_sales_for"
        app:layout_constraintTop_toTopOf="@+id/tv_sales_for"
        tools:text="Month" />

    <TextView
        android:id="@+id/tv_sales_dollar_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/content_desc_dollar_amount_being_shown"
        android:text="@string/dollar_amount_shown_for_time_period"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_period_text"
        tools:text="$0.00" />

    <TextView
        android:id="@+id/tv_recent_transactions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/recent_transaction_text"
        android:text="@string/recent_transaction_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sales_dollar_value" />

    <ScrollView
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recent_transactions_text">


        <TableLayout
            android:id="@+id/tl_recent_transactions_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_desc_list_of_recent_transactions"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/table_border">

            <TableRow
                android:id="@+id/table_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/header_cell_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_border"
                    android:padding="5dp"
                    android:paddingStart="@dimen/table_padding_column1"
                    android:paddingEnd="@dimen/table_padding_column1"
                    android:text="Date"></TextView>

                <TextView
                    android:id="@+id/header_cell_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_border"
                    android:padding="5dp"
                    android:paddingStart="@dimen/table_padding_column2"
                    android:paddingEnd="@dimen/table_padding_column2"
                    android:text="Seller"></TextView>

                <TextView
                    android:id="@+id/header_cell_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_border"
                    android:padding="5dp"
                    android:paddingStart="@dimen/table_padding_column3"
                    android:paddingEnd="@dimen/table_padding_column3"
                    android:text="# Dozen Sold"></TextView>

                <TextView
                    android:id="@+id/header_cell_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_border"
                    android:padding="5dp"
                    android:paddingStart="@dimen/table_padding_column4"
                    android:paddingEnd="@dimen/table_padding_column4"
                    android:text="Total Sale"></TextView>


            </TableRow>
        </TableLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>